Subscription and resturant schemas updated
