# docs/swagger.json
@@ -925,6 +925,15 @@
                 "email": {
                     "type": "string"
                 },
+                "has_delivery": {
+                    "type": "boolean"
+                },
+                "has_parking": {
+                    "type": "boolean"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "location": {
                     "$ref": "#/definitions/models.Location"
                 },
@@ -933,6 +942,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "number_of_tables": {
+                    "type": "integer"
                 },
                 "phone": {
                     "type": "string"
@@ -1067,6 +1079,15 @@
                 "email": {
                     "type": "string"
                 },
+                "has_delivery": {
+                    "type": "boolean"
+                },
+                "has_parking": {
+                    "type": "boolean"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "location": {
                     "$ref": "#/definitions/models.Location"
                 },
@@ -1075,6 +1096,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "number_of_tables": {
+                    "type": "integer"
                 },
                 "phone": {
                     "type": "string"
